#===============================================================================
# @file   CMakeLists.txt
# @author David Kammer <david.kammer@epfl.ch>
# @date   Fri Dec 03 11:09:59 2010
#
# @section LICENSE
#
# <insert lisence here>
#
# @section DESCRIPTION
#
#===============================================================================

#===============================================================================

add_subdirectory("test_neighbor_structure")
add_subdirectory("test_contact_search")
add_subdirectory("test_contact_2d")
add_subdirectory("test_contact_rigid_no_friction")

