#===============================================================================
# @file   CMakeLists.txt
# @author Leonardo Snozzi <leonardo.snozzi@epfl.ch>
# @date   Mon Jan 17 11:48:11 2011
#
# @section LICENSE
#
# <insert lisence here>
#
# @section DESCRIPTION
#
#===============================================================================

#===============================================================================

add_subdirectory("test_contact_2d_expli")
#add_subdirectory("test_contact_2d_expli_fric")



